# DigitalProductPassport

./: .env.example  .gitignore  LEARNINGS.md  README.md  docker-compose.yml  ensure-milestones.ps1
.github/: copilot-instructions.md
.github/agents/: AAS-orchestrator.agent.md  AAS-sprint-planner.agent.md  mcp-pr-review.agent.md
.github/prompts/: 00_AAS_orchestrate.prompt.md  01_AAS_implement.prompt.md  02_AAS_commit.prompt.md  03_AAS_review.prompt.md  04_AAS_merge.prompt.md  10_AAS_sprint_planning.prompt.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  logging.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/infrastructure/db/: base.py
backend/app/infrastructure/db/migrations/: env.py  script.py.mako
backend/app/infrastructure/db/migrations/versions/: 0001_postgresql_migration_baseline.py
backend/app/infrastructure/db/models/: __init__.py
backend/app/infrastructure/keycloak/: __init__.py  auth.py  models.py
backend/tests/integration/: test_health_endpoints.py
backend/tests/unit/: test_config.py  test_keycloak_auth.py
doc/: README.md
doc/planning/: 00_executive_summary.md  01_stakeholder_roles.md  02_requirements.md  03_user_journeys.md  04_domain_model.md  05_system_architecture.md  06_security_compliance.md  07_modules.md  08_backlog_roadmap.md  09_testing_quality.md  10_operations_observability.md  README.md  (+1 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
infra/: README.md
(+10 files in other folders)
